[package]
name = "ize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"
rustc-hash = "1.1.0"

[dependencies.nom]
version = "7.1.3"
default-features = false
features = ["alloc"]

[[example]]
name = "demo"

[[example]]
name = "experiment"

[[example]]
name = "experiment2"