[package]
name = "ize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"
hashbrown = "0.14"
rustc-hash = { version = "1.1", default-features = false }

[[example]]
name = "expr"

[[example]]
name = "cmd"

[[example]]
name = "demo"